# mjira

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: init.sql
gateway/: nginx.conf
services/audit/: Dockerfile  README.md  alembic.ini  entrypoint.sh  requirements.txt
services/audit/alembic/: env.py
services/audit/app/: consumer.py  db.py  main.py  models.py
services/auth/: Dockerfile  README.md  alembic.ini  requirements.txt
services/auth/alembic/: env.py
services/auth/app/: db.py  main.py  models.py  routes.py  schemas.py
services/issues/: Dockerfile  README.md  alembic.ini  requirements.txt
services/issues/alembic/: env.py
services/issues/app/: db.py  deps.py  main.py  models.py  routes.py  schemas.py
services/notifications/: Dockerfile  README.md  entrypoint.sh  requirements.txt
services/notifications/app/: consumer.py  email.py  main.py
services/projects/: Dockerfile  README.md  alembic.ini
services/projects/alembic/: env.py
services/projects/app/: main.py  models.py  routes.py  schemas.py
services/tenant/: Dockerfile  README.md  alembic.ini  requirements.txt
services/tenant/alembic/: env.py
shared/cache/: __init__.py  redis_client.py
shared/events/: __init__.py  publisher.py
shared/jwt_utils/: __init__.py  jwt_utils.py
shared/observability/: __init__.py  tracing.py
tests/: README.md  conftest.py  test_audit.py  test_auth.py  test_events.py  test_health.py  test_isolation.py  test_issues.py  test_projects.py  test_redis.py  test_tenants.py
(+9 files in other folders)
