[project]
name = "mjira"
version = "0.1.0"
description = "Multi-tenant Jira clone (microservices). Local dev env for IDE/tests/lint; runtime lives in Docker."
requires-python = ">=3.12"

# Union of every service's runtime deps. The Dockerfiles still install from
# each service's own requirements.txt — this list exists so your IDE,
# pytest, ruff, and mypy have something to introspect locally.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.2.0",
    "httpx==0.27.2",
    "email-validator==2.2.0",
    "pika==1.3.2",
    "redis==5.0.8",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["services/*/alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: Depends() in argument defaults is the standard FastAPI pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
# Each service has its own top-level `app/` package — explicit bases prevents
# mypy from treating them as duplicates of one global `app` module.
explicit_package_bases = true
exclude = ["services/.*/alembic/"]
